# Search_Engine

./: CMakeLists.txt  README.md  config.json  file1.txt  file2.txt  file3.txt  file4.txt  main.cpp  requests.json
config_files/: answers.json
include/: ConverterJSON.h  Exceptions.h  InvertedIndex.h  SearchServer.h  tests.h
src/: CMakeLists.txt  ConverterJSON.cpp  InvertedIndex.cpp  SearchServer.cpp
tests/: CMakeLists.txt  SearchEngine_test.cpp
